# grcrs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: index.html  report.html
man/: grc.1  grcat.1
src/: grcatrs.rs  grcrs.rs
tests/: cli.rs
