[package]
name = "grcrs"
version = "1.13.0"
edition = "2021"
description = "Generic Colouriser — a faithful Rust port of grc"
license = "GPL-2.0-or-later"
repository = "https://github.com/MenkeTechnologies/grcrs"
readme = "README.md"

exclude = [
    "/tests/",
    "/.github/",
    "/test_data/",
    "/test_corpus/",
    "**/*parity*",
    "/docs/",
    "/scripts/",
    "/bench/",
    "/vendor/",
    "/completions/",
    "/zshrs_dump.*",
    "/examples/"
]


[[bin]]
name = "grc"
path = "src/grcrs.rs"

[[bin]]
name = "grcat"
path = "src/grcatrs.rs"

[dependencies]
fancy-regex = "0.14"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
