[package]
name = "grcrs"
version = "1.13.0"
edition = "2021"
description = "Generic Colouriser — a faithful Rust port of grc"
repository = "https://github.com/MenkeTechnologies/grcrs"
readme = "README.md"
license = "MIT"
authors = ["MenkeTechnologies <linux.dev25@gmail.com>"]
homepage = "https://menketechnologies.github.io/grcrs/"
documentation = "https://docs.rs/grcrs"
keywords = ["terminal", "unix"]
categories = ["command-line-utilities"]

exclude = [
    "/tests/",
    "/.github/",
    "**/*parity*",
    "/docs/",
    "/vendor/",
    "/zshrs_dump.*"
]


[[bin]]
name = "grc"
path = "src/grcrs.rs"

[[bin]]
name = "grcat"
path = "src/grcatrs.rs"

[dependencies]
fancy-regex = "0.14"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
